--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-runtime": "^6.26.0",
     "dwt": "^14.2.0",
+    "express": "^4.16.4",
     "file-saver": "^2.0.0",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "tesseract.js": "^1.0.14",
     "vue": "^2.5.17",
     "vue-pdf": "^4.0.5",
     "vue-router": "^3.0.1",
     "vue-scroll": "^2.1.9",
     "vue-select": "^2.5.1",
+    "vue-socket.io": "^3.0.7",
     "vuetify": "^1.3.0",
     "vuex": "^3.0.1"
   },
